Fixing layout bugs in create story

--- a/src/app/admin/create-story/story-info/story-info.component.scss
+++ b/src/app/admin/create-story/story-info/story-info.component.scss
@@ -9,4 +9,12 @@
     border: 2px solid red;
   }
 
+  .error {
+    grid-column: 1/-1;
+  }
+
+}
+
+.story-info-container.ng-dirty > .ng-invalid {
+  border: 2px solid red;
 }
